# nm-Otool

./: .gitignore  CMakeLists.txt  Makefile  a.out  bite  hello  hello.c  helloword.asm  mach-o-executable.md  main.c  nm  nm_correction_script.sh  note.md  otool_correction_script.sh  test_nm.sh  test_script.sh  test_script_all.sh  test_script_otool.sh
binaire_test/: test_nm.sh
break-nm/: death.py
includes/: nm_otool.h
src/: add_link_sectionlst.c  archive.c  binary_map.c  build_mmap.c  build_segment_list.c  create_mmap.c  debug.c  dispatch.c  ft_nm.c  ft_otool.c  get_debug_letter.c  get_symbol_letter.c  getter.c  handle.archive.c  handle.create_mmap.c  handle.fat_arch.c  handle.maco.c  handle.ofile.c  handle_fat_arch.c  handle_ofile.c  magic_number.c  main.c  nm_main.c  otool.print.c  parse_maco_header.c  parser_option.c  print.c  print.nm.c  print.nm.debug.c  print.nm.get_symbol_type.c  print_header.c  section_list.add_link.c  section_list.build.c  section_list_add_link.c  sections.add_segment.c  sections.build_sections.c  setter.c  start.c  swapif.c  sym_array.build.c  (+18 more)
src/utilitaries/: debug.c  getter.c  print_header.c  swapif.c
